Use ZGC, replace Blowfish with MD5